the_project/todo/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: course
spec:
  selector:
    matchLabels:
      app: course
  template:
    metadata:
      labels:
        app: course
    spec:
      containers:
        - name: course
          image: ahmedevops/todo:1.12
          volumeMounts:
            - mountPath: /app/images
              name: image-cache
          imagePullPolicy: Always
      volumes:
        - name: image-cache
          persistentVolumeClaim:
            claimName: todo-claim
