the_project/todo/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: course-service
spec:
  type: ClusterIP
  selector:
    app: course
  ports:
    - port: 80
      targetPort: 8080
